--- a/index.html
+++ b/index.html
@@ -29,38 +29,215 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
     "lucide-react": "https://esm.sh/lucide-react@0.460.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
   <script src="https://unpkg.com/@babel/standalone@7.26.2/babel.min.js"></script>
 </head>
-<body>
+<body class="bg-[#fffafb]">
   <div id="root"></div>
-  <script>
-    window.process = { env: { NODE_ENV: 'production' } };
-  </script>
-  <script type="text/babel" data-type="module" data-presets="react,typescript">
-    import React from 'react';
+  
+  <script type="text/babel" data-presets="react,typescript">
+    import React, { useState, useEffect } from 'react';
     import ReactDOM from 'react-dom/client';
-    import App from './App.tsx';
+    import { 
+      Heart, Users, Calendar, ShieldCheck, BookOpen, Activity, ArrowRight, 
+      ChevronDown, CheckCircle2, Lock, MessageSquare, Star, ChevronRight, 
+      Share2, Download, ChevronUp, RefreshCcw, ArrowLeft, Sun 
+    } from 'lucide-react';
 
-    const rootElement = document.getElementById('root');
-    if (rootElement) {
-      const root = ReactDOM.createRoot(rootElement);
-      root.render(
-        <React.StrictMode>
-          <App />
-        </React.StrictMode>
+    // --- Constants ---
+    const brandColors = {
+      primary: '#ecacbc',
+      secondary: '#a7d4e0',
+      success: '#9bcba6',
+      accent: '#f3f0b8',
+      softBlue: '#d2e8f1',
+      softPink: '#f4d0da',
+      deepPink: '#d98a9d'
+    };
+
+    const powerCategories = {
+      support: { label: '支持力', ids: [1, 2], color: '#ecacbc', icon: <Heart size={20} /> },
+      info: { label: '資訊力', ids: [3, 4], color: '#a7d4e0', icon: <Calendar size={20} /> },
+      knowledge: { label: '知識力', ids: [5, 6], color: '#9bcba6', icon: <BookOpen size={20} /> }
+    };
+
+    const questions = [
+      { id: 1, text: '我能覺察自己的情緒極限，並在體力或精神透支前主動尋求喘息。', icon: <Heart size={24} style={{ color: brandColors.primary }} /> },
+      { id: 2, text: '我能讓周邊的人準確理解我的處境，避免因照顧問題產生衝突或孤立。', icon: <Users size={24} style={{ color: brandColors.secondary }} /> },
+      { id: 3, text: '我能有效整合政府或民間各項資源，建立穩定的日常支援系統。', icon: <Calendar size={24} style={{ color: brandColors.success }} /> },
+      { id: 4, text: '我對日常照顧流程有明確規劃，即使發生突發狀況也知道如何處理。', icon: <ShieldCheck size={24} style={{ color: '#88b091' }} /> },
+      { id: 5, text: '我掌握被照顧者疾病的關鍵知識，能準確判斷其生理或行為變化的情況。', icon: <BookOpen size={24} style={{ color: brandColors.primary }} /> },
+      { id: 6, text: '在面臨醫療選擇或治療方案時，我能清楚衡量利弊並做出合適的決定。', icon: <Activity size={24} style={{ color: brandColors.secondary }} /> }
+    ];
+
+    const currentOptions = [
+      { title: '體力透支', desc: '長期疲累身心已達極限', moodLabel: '沉重、倦怠' },
+      { title: '孤軍奮戰', desc: '獨自支撐缺乏分擔對象', moodLabel: '孤寂、無助' },
+      { title: '資訊焦慮', desc: '知識雜亂找不到正確方向', moodLabel: '迷惘、不安' },
+      { title: '決策重擔', desc: '面對重大選擇壓力極大', moodLabel: '緊繃、壓力' },
+      { title: '失去生活', desc: '被照顧填滿沒了自我未來', moodLabel: '壓抑、封閉' }
+    ];
+
+    const futureOptions = [
+      { title: '掌控現狀', desc: '掌控病況應對不再慌亂', moodLabel: '安穩、自信' },
+      { title: '靈活調度', desc: '善用資源建立支援系統', moodLabel: '輕盈、流動' },
+      { title: '適度喘息', desc: '定期留白休息沒有罪惡', moodLabel: '自在、呼吸' },
+      { title: '溝通和諧', desc: '互動順暢減少對立衝突', moodLabel: '溫慢、流暢' },
+      { title: '生活平衡', desc: '照顧與工作兼顧生活不脫軌', moodLabel: '和諧、完整' }
+    ];
+
+    const cities = ['臺北市', '新北市', '基隆市', '桃園市', '新竹縣', '新竹市', '苗栗縣', '台中市', '南投縣', '彰化縣', '雲林縣', '嘉義縣', '嘉義市', '台南市', '高雄市', '屏東縣', '宜蘭縣', '花蓮縣', '台東縣', '澎湖縣', '金門縣', '連江縣'];
+
+    // --- Illustrations ---
+    const AvatarIllustration = ({ type, selected }) => {
+      const scale = selected ? "scale-110" : "scale-100";
+      if (type === 'female') return (
+        <svg viewBox="0 0 100 100" className={`w-20 h-20 transition-transform ${scale}`}>
+          <circle cx="50" cy="50" r="48" fill="#FFEDF2" stroke={selected ? "#F472B6" : "none"} strokeWidth="3"/>
+          <path d="M42 65 L42 80 L58 80 L58 65" fill="#FFE4E1" />
+          <path d="M25 80 Q50 70 75 80 L75 100 L25 100 Z" fill="#D98A9D"/>
+          <circle cx="50" cy="45" r="22" fill="#FFE4E1"/>
+          <path d="M28 45c0-15 10-25 22-25s22 10 22 25c0 5-5 5-5 0 0-10-8-15-17-15s-17 5-17 15c0 5-5 5-5 0z" fill="#4A3728"/>
+          <circle cx="42" cy="45" r="2" fill="#4A3728"/><circle cx="58" cy="45" r="2" fill="#4A3728"/>
+          <path d="M45 53s2 3 5 3 5-3 5-3" stroke="#F472B6" fill="none" strokeWidth="2" strokeLinecap="round"/>
+        </svg>
       );
-    }
+      if (type === 'neutral') return (
+        <svg viewBox="0 0 100 100" className={`w-20 h-20 transition-transform ${scale}`}>
+          <circle cx="50" cy="50" r="48" fill="#E0F2FE" stroke={selected ? "#38BDF8" : "none"} strokeWidth="3"/>
+          <path d="M42 65 L42 80 L58 80 L58 65" fill="#FFD8B1" />
+          <path d="M25 80 Q50 70 75 80 L75 100 L25 100 Z" fill="#7BBED9"/>
+          <circle cx="50" cy="45" r="22" fill="#FFD8B1"/>
+          <path d="M28 40c0-10 10-20 22-20s22 10 22 20-5 5-5 0c0-10-8-12-17-12s-17 2-17 12c0 5-5 5-5 0z" fill="#2D3748"/>
+          <circle cx="42" cy="45" r="2.5" fill="#2D3748"/><circle cx="58" cy="45" r="2.5" fill="#2D3748"/>
+          <path d="M43 55q7 5 14 0" stroke="#38BDF8" fill="none" strokeWidth="3" strokeLinecap="round"/>
+        </svg>
+      );
+      return (
+        <svg viewBox="0 0 100 100" className={`w-20 h-20 transition-transform ${scale}`}>
+          <circle cx="50" cy="50" r="48" fill="#ECFDF5" stroke={selected ? "#10B981" : "none"} strokeWidth="3"/>
+          <path d="M42 65 L42 80 L58 80 L58 65" fill="#FDE68A" />
+          <path d="M25 80 Q50 70 75 80 L75 100 L25 100 Z" fill="#88B091"/>
+          <circle cx="50" cy="45" r="22" fill="#FDE68A"/>
+          <path d="M30 35c0-8 8-15 20-15s20 7 20 15c0 5-20 5-40 0z" fill="#1F2937"/>
+          <circle cx="40" cy="46" r="2" fill="#1F2937"/><circle cx="60" cy="46" r="2" fill="#1F2937"/>
+          <path d="M45 55c2 1 8 1 10 0" stroke="#059669" fill="none" strokeWidth="2.5" strokeLinecap="round"/>
+        </svg>
+      );
+    };
+
+    const SceneIllustration = ({ type, index, active }) => {
+      if (index === null) return null;
+      return (
+        <svg viewBox="0 0 100 100" className={`w-full h-full rounded-xl overflow-hidden transition-all ${active ? (type === 'current' ? 'ring-4 ring-pink-400' : 'ring-4 ring-green-400') : 'opacity-100'}`}>
+          <rect width="100" height="100" fill={type === 'current' ? '#f1f5f9' : '#f0fdf4'} />
+          <circle cx="50" cy="50" r="30" fill={type === 'current' ? '#94a3b8' : '#9bcba6'} opacity="0.3" />
+          <text x="50" y="55" textAnchor="middle" fontSize="10" fill="#666">場景 {index + 1}</text>
+        </svg>
+      );
+    };
+
+    // --- Main App Component ---
+    const App = () => {
+      const [currentPage, setCurrentPage] = useState('intro');
+      const [scores, setScores] = useState({});
+      const [nebulaData, setNebulaData] = useState({ q1: 5, q8: '', q9: '', q15: '', q16: '', nickname: '', avatar: 'female' });
+      const [moodState, setMoodState] = useState({ currentImg: null, currentTag: '', futureImg: null, futureTag: '' });
+      const [expandedPower, setExpandedPower] = useState(null);
+      const [showConsult, setShowConsult] = useState(false);
+
+      const navigateTo = (page) => {
+        setCurrentPage(page);
+        window.scrollTo(0, 0);
+      };
+
+      const handleScoreChange = (id, val) => setScores(prev => ({ ...prev, [id]: val }));
+
+      return (
+        <div className="min-h-screen font-sans text-gray-800 pb-16 bg-[#fffafb] leading-relaxed">
+          <header className="fixed top-0 left-0 right-0 z-50 bg-white shadow-sm">
+            <div className="p-3 text-center flex justify-center items-center">
+              <span className="text-xl font-black text-pink-500">星雲計畫</span>
+            </div>
+            <div className="h-1 w-full bg-gray-100">
+              <div className="h-full bg-pink-400 transition-all duration-300" style={{ width: currentPage === 'intro' ? '0%' : '50%' }}></div>
+            </div>
+          </header>
+
+          <main className="max-w-md mx-auto px-4 pt-20">
+            {currentPage === 'intro' && (
+              <div className="space-y-6 animate-in fade-in py-10">
+                <div className="bg-white p-8 rounded-[32px] shadow-lg border-2 border-pink-50 text-center">
+                  <div className="w-24 h-24 bg-pink-50 rounded-full mx-auto mb-6 flex items-center justify-center">
+                    <Heart className="text-pink-400" size={48} />
+                  </div>
+                  <h1 className="text-2xl font-black mb-4 text-gray-800">照護指南速成工具</h1>
+                  <p className="text-gray-500 mb-8 font-medium">給自己的安心指引，共享給家人的照顧要點</p>
+                  <button onClick={() => navigateTo('assessment')} className="w-full py-5 rounded-full bg-pink-500 text-white font-black text-lg shadow-xl active:scale-95 transition-all flex items-center justify-center gap-2">
+                    立即開始 <ArrowRight size={20} />
+                  </button>
+                </div>
+              </div>
+            )}
+
+            {currentPage === 'assessment' && (
+              <div className="space-y-4 animate-in slide-in-from-right py-6">
+                <h2 className="text-xl font-black text-center mb-6">照顧三力自評</h2>
+                {questions.map((q) => (
+                  <div key={q.id} className="p-5 rounded-2xl bg-white border-2 border-pink-50 shadow-sm">
+                    <div className="flex items-start gap-3 mb-4">
+                      {q.icon}
+                      <p className="text-lg font-bold leading-tight">{q.text}</p>
+                    </div>
+                    <div className="flex justify-between items-center">
+                      {[1, 2, 3, 4, 5].map((num) => (
+                        <button key={num} onClick={() => handleScoreChange(q.id, num)} className={`w-12 h-12 rounded-full border-2 flex items-center justify-center font-bold transition-all ${scores[q.id] === num ? 'bg-pink-500 border-pink-500 text-white' : 'border-gray-100 text-gray-400'}`}>
+                          {num}
+                        </button>
+                      ))}
+                    </div>
+                  </div>
+                ))}
+                <button 
+                  disabled={Object.keys(scores).length < 6} 
+                  onClick={() => navigateTo('result')} 
+                  className="w-full py-5 rounded-full bg-pink-500 text-white font-black text-lg shadow-xl active:scale-95 transition-all mt-6 disabled:opacity-50"
+                >
+                  查看分析報告
+                </button>
+              </div>
+            )}
+
+            {currentPage === 'result' && (
+              <div className="animate-in zoom-in py-6">
+                <div id="result-card" className="bg-white p-6 rounded-[32px] shadow-2xl border-2 border-pink-50">
+                  <div className="text-center mb-8">
+                    <AvatarIllustration type={nebulaData.avatar} selected={true} />
+                    <h2 className="text-2xl font-black mt-4">您的照顧分析報告</h2>
+                  </div>
+                  <div className="space-y-6">
+                    <div className="p-4 bg-pink-50 rounded-2xl">
+                      <h3 className="font-black text-pink-600 mb-2 flex items-center gap-2"><Heart size={18}/> 溫馨建議</h3>
+                      <p className="text-gray-700 text-base">照顧是一場長跑，請務必保留給自己的休息空間。這份指南將協助您理清當下的壓力源與可用資源。</p>
+                    </div>
+                    <button onClick={() => navigateTo('intro')} className="w-full py-4 rounded-full border-2 border-pink-500 text-pink-500 font-bold active:scale-95 transition-all">
+                      重新檢測
+                    </button>
+                  </div>
+                </div>
+              </div>
+            )}
+          </main>
+        </div>
+      );
+    };
+
+    const root = ReactDOM.createRoot(document.getElementById('root'));
+    root.render(<App />);
   </script>
 </body>
 </html>
